--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    height: 100vh;
+    height: 100%;
   }
   
   .welcome-text {
@@ -20,8 +20,13 @@
     margin-top: 20px;
   }
   
-  @media (min-width: 768px) {
+  @media (max-width: 768px) {
+
+    .welcome-container {
+      height: 100vh;
+    }
+
     .zoo-image {
-      max-width: 50%;
+      min-width: 50%;
     }
   }
