--- a/src/components/Animaldetails/Animaldetails.module.css
+++ b/src/components/Animaldetails/Animaldetails.module.css
@@ -1,26 +1,33 @@
-
 .animal-details {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 20px;
-    max-width: 300px;
-  }
-  
-  .animal-details img {
-    width: 100%;
-    height: auto;
-    margin-bottom: 10px;
-  }
-  
-  .animal-details h3 {
-    margin-bottom: 10px;
-  }
-  
-  .animal-details p {
-    margin-bottom: 10px;
-  }
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  max-width: 300px;
+}
+
+.animal-details img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+
+.animal-details h3 {
+  margin-bottom: 10px;
+  color: #333333;
+  font-size: 1.5rem;
+}
+
+.animal-details p {
+  margin-bottom: 10px;
+  color: #444444;
+  font-size: 1.2rem;
+}
+
   
