--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 
   .main-content {
     flex: 1;
-    margin-right: 150px;
+    margin-right: 250px;
   }
 
 nav {
@@ -29,4 +29,16 @@ nav a {
 
 nav a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main-content {
+    margin-right: 0;
+    margin-top: 20px;
+  }
 }
